Always add vertical scrollbar - fix page shift when going from short long pages

--- a/public/style/social.css
+++ b/public/style/social.css
@@ -1,4 +1,7 @@
 
+html>body {
+    overflow-y: scroll;
+}
 body {
     margin: 0;
     padding: 0;
